New version includes reports - PDD - duration
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23965

--- a/CLITester/CallGeneratorLibrary/app.config
+++ b/CLITester/CallGeneratorLibrary/app.config
@@ -28,4 +28,5 @@
             connectionString="Data Source=.;Initial Catalog=FraudTest2;User ID=sa;Password=vanrise@cce$$;"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+</configuration>
