(Routing Analysis + Customer Routing ) reports
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23970

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillingReports\CarrierSummaryProfitReportGenerator.cs" />
+    <Compile Include="BillingReports\RoutingAnalysisReportGenerator.cs" />
+    <Compile Include="BillingReports\CustomerRoutingReportGenerator.cs" />
     <Compile Include="BillingReports\CustomerSummaryReportGenerator.cs" />
     <Compile Include="BillingReports\DailyCarrierSummaryByDayReportGenerator.cs" />
     <Compile Include="BillingReports\DailyCarrierSummaryReportGenerator.cs" />
