--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -385,6 +385,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\Analytics\rdlCarrierProfitSummary.rdlc" />
+    <EmbeddedResource Include="Reports\Analytics\rdlCustomerRoutingReport.rdlc" />
     <EmbeddedResource Include="Reports\Analytics\rdlCustomerSummary.rdlc" />
     <EmbeddedResource Include="Reports\Analytics\rdlDailySummary.rdlc" />
     <EmbeddedResource Include="Reports\Analytics\rdlDailySummaryForcasting.rdlc" />
@@ -398,6 +399,7 @@
     <EmbeddedResource Include="Reports\Analytics\rdlZoneSummaryDetailed.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Reports\Analytics\rdlZoneSupplierSummary.rdlc" />
     <EmbeddedResource Include="Reports\Analytics\ZoneProfit.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
