added reference to BusinessProcess
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23973

--- a/CDRAnalysis/CDRAnalysis.Web/Web.config
+++ b/CDRAnalysis/CDRAnalysis.Web/Web.config
@@ -8,14 +8,22 @@
    
      
  <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile_WF;User ID=walid;Password=P@ssw0rd;"            providerName="System.Data.SqlClient" />
-    <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"  providerName="MySql.Data.MySqlClient" /> 
+    <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"  providerName="MySql.Data.MySqlClient" />
 
+    <add name="TransactionDBConnString"    connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroTransaction;Data Source=."/>
+    <add name="LogDBConnString"            connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroLog;Data Source=."/>
+  
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
+    <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
+    <add key="QueueItemDBConnStringKey" value="QueueDBConnString"/>
+    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
     <add key="SecurityDBConnStringKey" value="CDRDBConnectionString"/>
   </appSettings>
   <system.web>
