--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Business/Vanrise.Fzero.FraudAnalysis.Business.csproj
@@ -41,6 +41,15 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.BusinessProcess">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.BusinessProcess.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.BusinessProcess.Client">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.BusinessProcess.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.BusinessProcess.Entities">
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.BusinessProcess.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Common">
       <HintPath>..\Dependencies\VanriseFramework\Vanrise.Common.dll</HintPath>
     </Reference>
@@ -49,6 +58,10 @@
     </Reference>
     <Reference Include="Vanrise.Queueing.Entities">
       <HintPath>..\Dependencies\VanriseFramework\Vanrise.Queueing.Entities.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Runtime, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Dependencies\VanriseFramework\Vanrise.Runtime.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -59,6 +72,10 @@
     <Compile Include="StrategyManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Arguments\Vanrise.Fzero.FraudAnalysis.BP.Arguments.csproj">
+      <Project>{8de7b4ac-2ea9-4a88-9a44-e73a21e26398}</Project>
+      <Name>Vanrise.Fzero.FraudAnalysis.BP.Arguments</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Data\Vanrise.Fzero.FraudAnalysis.Data.csproj">
       <Project>{521364bc-ae3d-4eca-8392-44a6c1961939}</Project>
       <Name>Vanrise.Fzero.FraudAnalysis.Data</Name>
