Workflow Module - Adding Column to Reprcining WF
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23981

--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -186,7 +186,7 @@
     <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
     <add key="RepricingParallelThreads" value="1"/>
     <add key="RoutingCodePrefixLength" value="2"/>
-    <add key="BCPDonotDeleteFiles" value="true"/>
+    <add key="BCPDonotDeleteFiles" value="false"/>
     <add key="RebuildZoneRates" value="false"/>
     <add key="BCPCommandName" value="bcp"/>
     <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
