Add Partial class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23984

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BusinessProcessController.cs" />
+    <Compile Include="Controllers\BusinessProcessControllerPartial.cs" />
     <Compile Include="ModelMappers\BPMappers.cs" />
     <Compile Include="Models\BPInstanceModel.cs" />
     <Compile Include="Models\BPTrackingMessageModel.cs" />
