--- a/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data.SQL/Vanrise.Security.Data.SQL.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BusinessEntityManager.cs" />
     <Compile Include="BusinessEntityModuleDataManager.cs" />
+    <Compile Include="DynamicPagesDataManager.cs" />
     <Compile Include="ModuleDataManager.cs" />
     <Compile Include="PermissionDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
