--- a/Vanrise/Code/Vanrise.Security.Web/Vanrise.Security.Web.csproj
+++ b/Vanrise/Code/Vanrise.Security.Web/Vanrise.Security.Web.csproj
@@ -113,9 +113,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Security\Constants\ChartDefinitionTypeEnum.js" />
     <Content Include="Security\Constants\HolderTypeEnum.js" />
     <Content Include="Security\Constants\PermissionFlagEnum.js" />
     <Content Include="Security\Services\APIServices\BusinessEntityAPIService.js" />
+    <Content Include="Security\Services\APIServices\DynamicPagesManagementAPIService.js" />
     <Content Include="Security\Services\APIServices\SecurityApiService.js" />
     <Content Include="Security\Services\APIServices\MenuAPIService.js" />
     <Content Include="Security\Services\APIServices\PermissionApiService.js" />
@@ -126,6 +128,10 @@
     <Content Include="Security\Views\BusinessEntityEditorController.js" />
     <Content Include="Security\Views\BusinessEntityManagement.html" />
     <Content Include="Security\Views\BusinessEntityManagementController.js" />
+    <Content Include="Security\Views\DynamicPages\DynamicPagesEditor.html" />
+    <Content Include="Security\Views\DynamicPages\DynamicPagesEditor.js" />
+    <Content Include="Security\Views\DynamicPagesManagement.html" />
+    <Content Include="Security\Views\DymanicPagesManagement.js" />
     <Content Include="Security\Views\Login.html" />
     <Content Include="Security\Views\LoginController.js" />
     <Content Include="Security\Views\PermissionEditor.html" />
@@ -143,6 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BusinessEntitiesController.cs" />
+    <Compile Include="Controllers\DynamicPagesManagementController.cs" />
     <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\PermissionController.cs" />
