--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Client/Vanrise.BusinessProcess.Client.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Client/Vanrise.BusinessProcess.Client.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BPClientPartial.cs" />
     <Compile Include="BPClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
