New theme TOneV2
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24004

--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -507,6 +507,7 @@
     <Content Include="Client\Styles\ng-sortable.style.css" />
     <Content Include="Client\Styles\simple-sidebar.css" />
     <Content Include="Client\Styles\Styles.css" />
+    <Content Include="Client\Styles\TOnv2theme.css" />
     <Content Include="Client\Styles\ui-grid-custom.css" />
     <Content Include="Client\Styles\ui-grid.css" />
     <Content Include="Client\Styles\ui-grid.svg" />
