--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -53,12 +53,15 @@
     <Compile Include="DynamicPage.cs" />
     <Compile Include="MenuItem.cs" />
     <Compile Include="Module.cs" />
+    <Compile Include="PageSettings.cs" />
     <Compile Include="Permission.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomPasswordHelper.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="User.cs" />
     <Compile Include="View.cs" />
+    <Compile Include="VisualElement.cs" />
+    <Compile Include="VisualElementSettings.cs" />
     <Compile Include="Widget.cs" />
     <Compile Include="WidgetSetting.cs" />
   </ItemGroup>
