--- a/Vanrise/Code/Vanrise.Web.Base/Vanrise.Web.Base.csproj
+++ b/Vanrise/Code/Vanrise.Web.Base/Vanrise.Web.Base.csproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseAPIController.cs" />
+    <Compile Include="JSONWithTypeAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup>
