updated BP connection strings in web.config
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24035

--- a/TOneV2/Code/TOneV2/TOne.Web/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="BusinessProcessDBConnString" connectionString="Data Source=.;Initial Catalog=TOneTransactionDB;User ID=sa; Password=p@ssw0rd" />
-    <add name="BusinessProcessTrackingDBConnString" connectionString="Data Source=.;Initial Catalog=TOneWFTracking;User ID=sa; Password=p@ssw0rd" />
+    <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=TOneTransactionDB;User ID=sa; Password=p@ssw0rd" />
+    <add name="LogDBConnString" connectionString="Data Source=.;Initial Catalog=TOneWFTracking;User ID=sa; Password=p@ssw0rd" />
     <!--<add name="MainDBConnString" connectionString="Server=192.168.110.180\redundant;Database=ToneSpactronNew;User ID=sa;Password=development@cce$$" />-->
       <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=TOneDevTest01;User ID=Development;Password=dev!123"/>
     <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=NetTalkForDev;User ID=Development;Password=dev!123" />-->
@@ -20,6 +20,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="BICubeName" value="BISLT One Day" />
     <add key="SecurityDBConnStringKey" value="MainDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
+    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
   </appSettings>
   <system.web>
     <httpHandlers>
