--- a/CDRAnalysis/CDRAnalysis.Web/Web.config
+++ b/CDRAnalysis/CDRAnalysis.Web/Web.config
@@ -10,8 +10,8 @@
  <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile_WF;User ID=walid;Password=P@ssw0rd;"            providerName="System.Data.SqlClient" />
     <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"  providerName="MySql.Data.MySqlClient" />
 
-    <add name="TransactionDBConnString"    connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroTransaction;Data Source=."/>
-    <add name="LogDBConnString"            connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=FZeroLog;Data Source=."/>
+    <add name="TransactionDBConnString"    connectionString="Initial Catalog=FZeroTransaction;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
+    <add name="LogDBConnString"            connectionString="Initial Catalog=FZeroLog;Data Source=.;User ID=sa; Password=p@ssw0rd"/>
   
   </connectionStrings>
   <appSettings>
