--- a/Vanrise/Code/Vanrise.Runtime.Business/Vanrise.Runtime.Business.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Business/Vanrise.Runtime.Business.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{32A30290-186B-4F63-8411-42710DC3620B}</ProjectGuid>
+    <ProjectGuid>{7B928BA5-C19B-4D8C-912F-8D2D8A679718}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vanrise.Runtime.Data.SQL</RootNamespace>
-    <AssemblyName>Vanrise.Runtime.Data.SQL</AssemblyName>
+    <RootNamespace>Vanrise.Runtime.Business</RootNamespace>
+    <AssemblyName>Vanrise.Runtime.Business</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -35,7 +35,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,18 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RunningProcessDataManager.cs" />
-    <Compile Include="SchedulerTaskDataManager.cs" />
+    <Compile Include="SchedulerTaskManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Vanrise.Data.SQL\Vanrise.Data.SQL.csproj">
-      <Project>{4ab70e59-2c65-4167-8d5f-897702cf161b}</Project>
-      <Name>Vanrise.Data.SQL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Vanrise.Data\Vanrise.Data.csproj">
-      <Project>{107dc891-2169-409f-9617-6d52723d05ce}</Project>
-      <Name>Vanrise.Data</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Runtime.Data\Vanrise.Runtime.Data.csproj">
       <Project>{2b79fccf-afbe-43f2-9ddc-3a91f5ff2489}</Project>
       <Name>Vanrise.Runtime.Data</Name>
