--- a/Vanrise/Code/Vanrise.Runtime.Data/Vanrise.Runtime.Data.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Data/Vanrise.Runtime.Data.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="IDataManager.cs" />
     <Compile Include="IRunningProcessDataManager.cs" />
+    <Compile Include="ISchedulerTaskDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntimeDataManagerFactory.cs" />
   </ItemGroup>
