--- a/Vanrise/Code/Vanrise.Runtime.Entities/Vanrise.Runtime.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Entities/Vanrise.Runtime.Entities.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningProcessInfo.cs" />
+    <Compile Include="SchedulerTask.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
