Runtime - Scheduler Service - Creating Task Management Page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24045

--- a/TOneV2/Code/TOneV2/TOne.Web/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web/Web.config
@@ -19,6 +19,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="BICubeName" value="BISLT One Day" />
+    <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
     <add key="SecurityDBConnStringKey" value="MainDBConnString"/>
     <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
