bp defintion editor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24048

--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
@@ -143,6 +143,8 @@
     <Content Include="BusinessProcess\Views\BPManagementController.js" />
     <Content Include="BusinessProcess\Views\BPTrackingModal.html" />
     <Content Include="BusinessProcess\Views\BPTrackingModalController.js" />
+    <Content Include="BusinessProcess\Views\InstanceEditor.html" />
+    <Content Include="BusinessProcess\Views\InstanceEditorController.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
