--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
@@ -150,6 +150,8 @@
     <Content Include="FraudAnalysis\Services\APIServices\SuspicionAnalysisAPIService.js" />
     <Content Include="FraudAnalysis\Services\APIServices\StrategyAPIService.js" />
     <Content Include="FraudAnalysis\Views\StrategyEditor.html" />
+    <Content Include="FraudAnalysis\Views\ExecuteStrategyProcessInput.html" />
+    <Content Include="FraudAnalysis\Views\ExecuteStrategyProcessInputController.js" />
     <Content Include="FraudAnalysis\Views\SuspicionAnalysis.html" />
     <Content Include="FraudAnalysis\Views\SuspicionAnalysisController.js" />
     <Content Include="FraudAnalysis\Views\SuspiciousNumberDetails.html" />
