--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -133,6 +133,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Client\Images\01.png" />
+    <Content Include="Client\Images\02.png" />
+    <Content Include="Client\Images\login.png" />
+    <Content Include="Client\Images\logoonheader.png" />
     <Content Include="Client\Javascripts\Constants\DaysOfWeekEnum.js" />
     <Content Include="Client\Javascripts\Constants\InsertOperationResultEnum.js" />
     <Content Include="Client\Javascripts\Constants\UpdateOperationResultEnum.js" />
