adding PriceList page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24063

--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/TOne.BusinessEntity.Web.csproj
@@ -144,6 +144,8 @@
     <Content Include="BusinessEntity\Views\CarrierAccountEditorController.js" />
     <Content Include="BusinessEntity\Views\CarrierAccountManagement.html" />
     <Content Include="BusinessEntity\Views\CarrierAccountManagementController.js" />
+    <Content Include="BusinessEntity\Views\CarrierPriceList.html" />
+    <Content Include="BusinessEntity\Views\CarrierPriceListController.js" />
     <Content Include="BusinessEntity\Views\Rates.html" />
     <Content Include="BusinessEntity\Views\RatesController.js" />
     <Content Include="BusinessEntity\Views\SwitchEditor.html" />
