implementing Dynamic page Cont. in addtion to adding the type for Menu as system or dynamic and adding id to the url if it is dynamic menu
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24073

--- a/TOneV2/Code/TOneV2/TOne.BI.Entities/TOne.BI.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Entities/TOne.BI.Entities.csproj
@@ -47,7 +47,9 @@
     <Compile Include="BIConfiguration.cs" />
     <Compile Include="BIConfigurationEntity.cs" />
     <Compile Include="BIConfigurationMeasure.cs" />
+    <Compile Include="ChartDirectiveObject.cs" />
     <Compile Include="Configuration.cs" />
+    <Compile Include="DataGridDirectiveObject.cs" />
     <Compile Include="EntityRecord.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="GenericEntityRecord.cs" />
