--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -139,6 +139,7 @@
     <Content Include="Client\Images\logoonheader.png" />
     <Content Include="Client\Javascripts\Constants\DaysOfWeekEnum.js" />
     <Content Include="Client\Javascripts\Constants\InsertOperationResultEnum.js" />
+    <Content Include="Client\Javascripts\Constants\MenuItemTypeEnum.js" />
     <Content Include="Client\Javascripts\Constants\UpdateOperationResultEnum.js" />
     <Content Include="Client\Javascripts\Constants\ValidationMessagesEnum.js" />
     <Content Include="Client\Javascripts\Controllers\ChartPrototypes\AMChartController.js" />
