--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Entities/Vanrise.BusinessProcess.Entities.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Entities/Vanrise.BusinessProcess.Entities.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseProcessInputArgument.cs" />
     <Compile Include="BPDefinition.cs" />
     <Compile Include="BPEvent.cs" />
     <Compile Include="BPInstance.cs" />
