--- a/TOneV2/Code/TOneV2/TOne.LCRProcess.Arguments/TOne.LCRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess.Arguments/TOne.LCRProcess.Arguments.csproj
@@ -41,8 +41,12 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.BusinessProcess.Entities">
+      <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.BusinessProcess.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DifferentialRoutingProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoutingByCodeGroupProcessInput.cs" />
     <Compile Include="RoutingProcessInput.cs" />
