--- a/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
+++ b/CDRAnalysis/CDRAnalysis.Web/CDRAnalysis.Web.csproj
@@ -218,6 +218,14 @@
       <Project>{3b35c6e1-fd21-4e32-a8bd-f11377a545a0}</Project>
       <Name>Vanrise.Web</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Fzero.CDRImport.BP.Arguments\Vanrise.Fzero.CDRImport.BP.Arguments.csproj">
+      <Project>{14794a4a-32a7-4273-b3a3-0c1b67831d60}</Project>
+      <Name>Vanrise.Fzero.CDRImport.BP.Arguments</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Arguments\Vanrise.Fzero.FraudAnalysis.BP.Arguments.csproj">
+      <Project>{8de7b4ac-2ea9-4a88-9a44-e73a21e26398}</Project>
+      <Name>Vanrise.Fzero.FraudAnalysis.BP.Arguments</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Fzero.FraudAnalysis.Business\Vanrise.Fzero.FraudAnalysis.Business.csproj">
       <Project>{c195cfd3-948d-447c-83b4-3365d0515ec9}</Project>
       <Name>Vanrise.Fzero.FraudAnalysis.Business</Name>
