--- a/CLITester/CLINumberLibrary/app.config
+++ b/CLITester/CLINumberLibrary/app.config
@@ -7,7 +7,7 @@
   </appSettings>
   <connectionStrings>
     <add name="CLINumberLibrary.Properties.Settings.CLINumberConnectionString"
-      connectionString="Data Source=.;Initial Catalog=CLINumber;User ID=sa;Password=P@ssw0rd!;"
+      connectionString="Data Source=.;Initial Catalog=CLINumber;User ID=sa;Password=vanrise@cce$$;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
