--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Entities/TOne.BusinessEntity.Entities.csproj
@@ -52,6 +52,7 @@
     <Compile Include="IBusinessEntityInfoManager.cs" />
     <Compile Include="IFlaggedServiceEntity.cs" />
     <Compile Include="IZoneSupplied.cs" />
+    <Compile Include="PriceList.cs" />
     <Compile Include="SupplierCodes.cs" />
     <Compile Include="Commission.cs" />
     <Compile Include="Enumerations.cs" />
