--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Data/TOne.BusinessEntity.Data.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ICodeDataManager.cs" />
     <Compile Include="ICommissionDataManager.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IPriceListDataManager.cs" />
     <Compile Include="IRateDataManager.cs" />
     <Compile Include="IFlaggedServiceDataManager.cs" />
     <Compile Include="ISwitchDataManager.cs" />
