Runtime Module - AddingTrigger Type Templates to scheduler Tasks
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24132

--- a/Vanrise/Code/Vanrise.Runtime.Entities/Vanrise.Runtime.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Entities/Vanrise.Runtime.Entities.csproj
@@ -46,6 +46,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningProcessInfo.cs" />
     <Compile Include="SchedulerTask.cs" />
+    <Compile Include="SchedulerTaskTrigger.cs" />
+    <Compile Include="SchedulerTaskTriggerType.cs" />
+    <Compile Include="TimeSchedulerTaskTrigger.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
