--- a/Vanrise/Code/Vanrise.Runtime.Data.SQL/Vanrise.Runtime.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Data.SQL/Vanrise.Runtime.Data.SQL.csproj
@@ -47,8 +47,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningProcessDataManager.cs" />
     <Compile Include="SchedulerTaskDataManager.cs" />
+    <Compile Include="SchedulerTaskTriggerTypeDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
+      <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
+      <Name>Vanrise.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Data.SQL\Vanrise.Data.SQL.csproj">
       <Project>{4ab70e59-2c65-4167-8d5f-897702cf161b}</Project>
       <Name>Vanrise.Data.SQL</Name>
