--- a/Vanrise/Code/Vanrise.Runtime.Data/Vanrise.Runtime.Data.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Data/Vanrise.Runtime.Data.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IDataManager.cs" />
     <Compile Include="IRunningProcessDataManager.cs" />
     <Compile Include="ISchedulerTaskDataManager.cs" />
+    <Compile Include="ISchedulerTaskTriggerTypeDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuntimeDataManagerFactory.cs" />
   </ItemGroup>
