--- a/Vanrise/Code/Vanrise.Runtime.Web/Vanrise.Runtime.Web.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Vanrise.Runtime.Web.csproj
@@ -103,6 +103,8 @@
     <Content Include="Runtime\Views\SchedulerTaskEditorController.js" />
     <Content Include="Runtime\Views\SchedulerTaskManagement.html" />
     <Content Include="Runtime\Views\SchedulerTaskManagementController.js" />
+    <Content Include="Runtime\Views\TriggerTemplates\TimerTriggerTemplate.html" />
+    <Content Include="Runtime\Views\TriggerTemplates\TimerTriggerTemplateController.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
