Implementing Widgets Management Page to insert new wiget with its settings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24134

--- a/Vanrise/Code/Vanrise.Security.Data/Vanrise.Security.Data.csproj
+++ b/Vanrise/Code/Vanrise.Security.Data/Vanrise.Security.Data.csproj
@@ -52,6 +52,7 @@
     <Compile Include="IRoleDataManager.cs" />
     <Compile Include="IUserDataManager.cs" />
     <Compile Include="IViewDataManager.cs" />
+    <Compile Include="IWidgetsDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurityDataManagerFactory.cs" />
   </ItemGroup>
