--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -51,6 +51,7 @@
     <Compile Include="RoleManager.cs" />
     <Compile Include="SecurityManager.cs" />
     <Compile Include="UserManager.cs" />
+    <Compile Include="WidgetsManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
