--- a/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Security.Entities/Vanrise.Security.Entities.csproj
@@ -65,6 +65,8 @@
     <Compile Include="VisualElement.cs" />
     <Compile Include="VisualElementSettings.cs" />
     <Compile Include="Widget.cs" />
+    <Compile Include="WidgetDefinition.cs" />
+    <Compile Include="WidgetDefinitionSetting.cs" />
     <Compile Include="WidgetSetting.cs" />
   </ItemGroup>
   <ItemGroup>
