optimizing the code of dynamic pages
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24135

--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessEntityManager.cs" />
-    <Compile Include="DynamicPagesManager.cs" />
+    <Compile Include="DynamicViewsManager.cs" />
     <Compile Include="MenuManager.cs" />
     <Compile Include="PermissionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
