Runtime Module - Scheduler task - Finished Templates
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24136

--- a/Vanrise/Code/Vanrise.Runtime.Data/Vanrise.Runtime.Data.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Data/Vanrise.Runtime.Data.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="IDataManager.cs" />
     <Compile Include="IRunningProcessDataManager.cs" />
+    <Compile Include="ISchedulerTaskActionTypeDataManager.cs" />
     <Compile Include="ISchedulerTaskDataManager.cs" />
     <Compile Include="ISchedulerTaskTriggerTypeDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
