--- a/Vanrise/Code/Vanrise.Runtime.Data.SQL/Vanrise.Runtime.Data.SQL.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Data.SQL/Vanrise.Runtime.Data.SQL.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningProcessDataManager.cs" />
+    <Compile Include="SchedulerTaskActionTypeDataManager.cs" />
     <Compile Include="SchedulerTaskDataManager.cs" />
     <Compile Include="SchedulerTaskTriggerTypeDataManager.cs" />
   </ItemGroup>
