--- a/Vanrise/Code/Vanrise.Runtime.Entities/Vanrise.Runtime.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Entities/Vanrise.Runtime.Entities.csproj
@@ -46,9 +46,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningProcessInfo.cs" />
     <Compile Include="SchedulerTask.cs" />
+    <Compile Include="SchedulerTaskAction.cs" />
+    <Compile Include="SchedulerTaskActionType.cs" />
     <Compile Include="SchedulerTaskTrigger.cs" />
     <Compile Include="SchedulerTaskTriggerType.cs" />
     <Compile Include="TimeSchedulerTaskTrigger.cs" />
+    <Compile Include="WFSchedulerTaskAction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
