--- a/Vanrise/Code/Vanrise.Runtime.Web/Vanrise.Runtime.Web.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Vanrise.Runtime.Web.csproj
@@ -99,6 +99,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Runtime\Services\APIServices\SchedulerTaskAPIService.js" />
+    <Content Include="Runtime\Views\ActionTemplates\WFActionTemplate.html" />
+    <Content Include="Runtime\Views\ActionTemplates\WFActionTemplateController.js" />
     <Content Include="Runtime\Views\SchedulerTaskEditor.html" />
     <Content Include="Runtime\Views\SchedulerTaskEditorController.js" />
     <Content Include="Runtime\Views\SchedulerTaskManagement.html" />
