--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Web/Vanrise.BusinessProcess.Web.csproj
@@ -126,6 +126,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BusinessProcessController - Copy.cs" />
     <Compile Include="Controllers\BusinessProcessController.cs" />
     <Compile Include="ModelMappers\BPMappers.cs" />
     <Compile Include="Models\BPInstanceModel.cs" />
