--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -186,9 +186,9 @@
     <add key="BusinessProcessDisabledNamedPipeService" value="true"/>
     <add key="RepricingParallelThreads" value="1"/>
     <add key="RoutingCodePrefixLength" value="2"/>
-    <add key="BCPDonotDeleteFiles" value="true"/>
+    <add key="BCPDonotDeleteFiles" value="false"/>
     <add key="RebuildZoneRates" value="false"/>
-    <add key="BCPTempFilesDirectory" value="D:\BCPFiles" />
+    <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
   </appSettings>
   <system.codedom>
     <compilers>
