--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/Vanrise.Fzero.FraudAnalysis.Web.csproj
@@ -149,6 +149,10 @@
   <ItemGroup>
     <Content Include="FraudAnalysis\Services\APIServices\SuspicionAnalysisAPIService.js" />
     <Content Include="FraudAnalysis\Services\APIServices\StrategyAPIService.js" />
+    <Content Include="FraudAnalysis\Views\SaveCDRToDBProcessInput.html" />
+    <Content Include="FraudAnalysis\Views\CDRImportProcessInput.html" />
+    <Content Include="FraudAnalysis\Views\SaveCDRToDBProcessInputController.js" />
+    <Content Include="FraudAnalysis\Views\CDRImportProcessInputController.js" />
     <Content Include="FraudAnalysis\Views\StrategyEditor.html" />
     <Content Include="FraudAnalysis\Views\ExecuteStrategyProcessInput.html" />
     <Content Include="FraudAnalysis\Views\ExecuteStrategyProcessInputController.js" />
