Runtime Module - Scheduler Service - Impmeneting Workflow Action
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24171

--- a/Vanrise/Code/Vanrise.Runtime.Web/Vanrise.Runtime.Web.csproj
+++ b/Vanrise/Code/Vanrise.Runtime.Web/Vanrise.Runtime.Web.csproj
@@ -107,6 +107,8 @@
     <Content Include="Runtime\Views\SchedulerTaskManagementController.js" />
     <Content Include="Runtime\Views\TriggerTemplates\TimerTriggerTemplate.html" />
     <Content Include="Runtime\Views\TriggerTemplates\TimerTriggerTemplateController.js" />
+    <Content Include="Runtime\Views\WFScheduleTemplates\ScheduleDailyRepricingProcessTemplate.html" />
+    <Content Include="Runtime\Views\WFScheduleTemplates\ScheduleDailyRepricingProcessTemplateController.js" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
