--- a/Vanrise/Code/Vanrise.Runtime/Vanrise.Runtime.csproj
+++ b/Vanrise/Code/Vanrise.Runtime/Vanrise.Runtime.csproj
@@ -47,6 +47,7 @@
     <Compile Include="RunningProcessManager.cs" />
     <Compile Include="RuntimeHost.cs" />
     <Compile Include="RuntimeService.cs" />
+    <Compile Include="SchedulerService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
